Bug 1015519 - Don't write uninitialized buffers to the AudioStream in AudioSegment::WriteTo. r=roc, a=sledru